# caffe

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
cmake/: Cuda.cmake  Dependencies.cmake  ProtoBuf.cmake  Summary.cmake  TargetResolvePrerequesites.cmake  Targets.cmake
cmake/Modules/: FindCUDNN.cmake  FindGFlags.cmake  FindGlog.cmake  FindOpenBLAS.cmake
cmake/Templates/: CaffeConfig.cmake.in
examples/cifar10/: convert_cifar_data.cpp
examples/cpp_classification/: classification.cpp
examples/mnist/: convert_mnist_data.cpp
include/caffe/: blob.hpp  caffe.hpp  common.hpp  filler.hpp  internal_thread.hpp  layer.hpp  net.hpp  parallel.hpp  sgd_solvers.hpp  solver.hpp  solver_factory.hpp
include/caffe/layers/: absval_layer.hpp  accuracy_layer.hpp  argmax_layer.hpp  base_conv_layer.hpp  base_data_layer.hpp  batch_norm_layer.hpp  batch_reindex_layer.hpp  bias_layer.hpp  bnll_layer.hpp  clip_layer.hpp  concat_layer.hpp  contrastive_loss_layer.hpp  conv_layer.hpp  crop_layer.hpp  cudnn_conv_layer.hpp  cudnn_deconv_layer.hpp  cudnn_lcn_layer.hpp  cudnn_lrn_layer.hpp  cudnn_pooling_layer.hpp  cudnn_relu_layer.hpp  cudnn_sigmoid_layer.hpp  cudnn_softmax_layer.hpp  cudnn_tanh_layer.hpp  data_layer.hpp  deconv_layer.hpp  dropout_layer.hpp  dummy_data_layer.hpp  eltwise_layer.hpp  elu_layer.hpp  embed_layer.hpp  euclidean_loss_layer.hpp  exp_layer.hpp  filter_layer.hpp  flatten_layer.hpp  hdf5_data_layer.hpp  hdf5_output_layer.hpp  heatmaps_from_vec_layer.hpp  hinge_loss_layer.hpp  im2col_layer.hpp  image_data_layer.hpp  (+35 more)
include/caffe/util/: benchmark.hpp  db.hpp  device_alternate.hpp  hdf5.hpp  io.hpp  mkl_alternate.hpp  signal_handler.h  upgrade_proto.hpp
overlay-ports/abseil/: cuda.patch  portfile.cmake
python/: CMakeLists.txt
python/caffe/: _caffe.cpp  pycaffe.py
src/caffe/: CMakeLists.txt  blob.cpp  common.cpp  data_transformer.cpp  internal_thread.cpp  layer.cpp  layer_factory.cpp  net.cpp  parallel.cpp  solver.cpp  solver_factory.cpp  syncedmem.cpp
src/caffe/layers/: absval_layer.cpp  accuracy_layer.cpp  argmax_layer.cpp  base_data_layer.cpp  batch_norm_layer.cpp  batch_reindex_layer.cpp  bias_layer.cpp  bnll_layer.cpp  clip_layer.cpp  concat_layer.cpp  contrastive_loss_layer.cpp  conv_layer.cpp  crop_layer.cpp  cudnn_conv_layer.cpp  cudnn_conv_layer.cu  cudnn_deconv_layer.cpp  cudnn_lcn_layer.cpp  cudnn_lrn_layer.cpp  cudnn_pooling_layer.cpp  cudnn_relu_layer.cpp  cudnn_sigmoid_layer.cpp  cudnn_softmax_layer.cpp  cudnn_tanh_layer.cpp  data_layer.cpp  deconv_layer.cpp  dropout_layer.cpp  dummy_data_layer.cpp  eltwise_layer.cpp  elu_layer.cpp  embed_layer.cpp  euclidean_loss_layer.cpp  exp_layer.cpp  filter_layer.cpp  hdf5_data_layer.cpp  hdf5_output_layer.cpp  heatmaps_from_vec_layer.cpp  im2col_layer.cpp  infogain_loss_layer.cpp  inner_product_layer.cpp  input_layer.cpp  (+27 more)
src/caffe/proto/: CMakeLists.txt  caffe.proto
src/caffe/solvers/: adam_solver.cpp  sgd_solver.cpp
src/caffe/test/: CMakeLists.txt  test_benchmark.cpp  test_gradient_based_solver.cpp  test_hdf5_output_layer.cpp  test_infogain_loss_layer.cpp  test_layer_factory.cpp  test_net.cpp  test_softmax_with_loss_layer.cpp  test_solver_factory.cpp  test_upgrade_proto.cpp
src/caffe/util/: benchmark.cpp  blocking_queue.cpp  db.cpp  hdf5.cpp  io.cpp  math_functions.cpp  math_functions.cu  signal_handler.cpp  upgrade_proto.cpp
tools/: caffe.cpp  compute_image_mean.cpp  convert_imageset.cpp  extract_features.cpp
